no more weird media query selector

--- a/angular-material.css
+++ b/angular-material.css
@@ -24111,7 +24111,7 @@ md-tooltip {
 /*  Also use 0% instead of 0px since minifiers will often convert 0px to 0 (which is unitless and will have the same problem).  */
 /*  Safari, however, fails with flex-basis : 0% and requires flex-basis : 0px  */
 
-@media screen\0 {
+@media screen {
     .flex {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24119,7 +24119,7 @@ md-tooltip {
     }
 }
 
-@media screen\0 {
+@media screen {
     .flex {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24127,8 +24127,7 @@ md-tooltip {
     }
 }
 
-@media screen\0
-and (max-width: 599px) {
+@media screen and (max-width: 599px) {
     .flex-xs {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24136,8 +24135,7 @@ and (max-width: 599px) {
     }
 }
 
-@media screen\0
-and (min-width: 600px) {
+@media screen and (min-width: 600px) {
     .flex-gt-xs {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24145,8 +24143,7 @@ and (min-width: 600px) {
     }
 }
 
-@media screen\0
-and (min-width: 600px) and (max-width: 959px) {
+@media screen and (min-width: 600px) and (max-width: 959px) {
     .flex-sm {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24154,8 +24151,7 @@ and (min-width: 600px) and (max-width: 959px) {
     }
 }
 
-@media screen\0
-and (min-width: 960px) {
+@media screen and (min-width: 960px) {
     .flex-gt-sm {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24163,8 +24159,7 @@ and (min-width: 960px) {
     }
 }
 
-@media screen\0
-and (min-width: 960px) and (max-width: 1279px) {
+@media screen and (min-width: 960px) and (max-width: 1279px) {
     .flex-md {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24172,8 +24167,7 @@ and (min-width: 960px) and (max-width: 1279px) {
     }
 }
 
-@media screen\0
-and (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
     .flex-gt-md {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24181,8 +24175,7 @@ and (min-width: 1280px) {
     }
 }
 
-@media screen\0
-and (min-width: 1280px) and (max-width: 1919px) {
+@media screen and (min-width: 1280px) and (max-width: 1919px) {
     .flex-lg {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24190,8 +24183,7 @@ and (min-width: 1280px) and (max-width: 1919px) {
     }
 }
 
-@media screen\0
-and (min-width: 1920px) {
+@media screen and (min-width: 1920px) {
     .flex-gt-lg {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
@@ -24199,8 +24191,7 @@ and (min-width: 1920px) {
     }
 }
 
-@media screen\0
-and (min-width: 1920px) {
+@media screen and (min-width: 1920px) {
     .flex-xl {
         -webkit-flex: 1 1 0%;
         -ms-flex: 1 1 0%;
